k8s/service.failover.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
